--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 # hugo server --minify --themesDir ../.. --baseURL=http://0.0.0.0:1313/theme/hugo-book/
 
 baseURL: http://127.0.0.1/
-title: Misaki's NoteBook
+title: NoteBook
 # theme: hugo-book
 
 # Book configuration
